# customCFR

./: CMakeLists.txt  README.md  main.cpp
Algorithms/: CFRAlgo.cpp  CFRAlgo.h  CFRNode.cpp  CFRNode.h
BaseFiles/: BaseAlgo.cpp  BaseAlgo.h  BaseData.cpp  BaseData.h  BaseGame.cpp  BaseGame.h  BaseNode.cpp  BaseNode.h  BaseState.cpp  BaseState.h  UniversalGame.cpp  UniversalGame.h
Games/: TicTacToe.cpp  TicTacToe.h  TicTacToeData.cpp  TicTacToeData.h  TicTacToeState.cpp  TicTacToeState.h
